--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
-<html>
-  <body>
-<h1>це мій 1 сайт</h1>
-<p>мій нікнейм в роблоксі ivan68rt85</p>
 
+html>
+<title></title>
 
+<body style="background-color:blue">
+    <header>
+        <h1> Це сайт про мою кішку (: </h1>
+        
+    </header>
+    <main>
+        <h1> моїй кішці 6 з половиную років її звати Еля </h1>
+        <p style="font-size:35px"> у  неї сині очі і сіро біла шерсть. Порода в неї шотландсь висловуха вона дуже сильно любить жовток з куриного яйця.</p img src="">
 
-
+    </main>
+    <footer>
+        <h1>
     
-  </body>
+    </footer>
+</body>
+
 </html>
