--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ html>
     </header>
     <main>
         <h1> моїй кішці 6 з половиную років її звати Еля </h1>
-        <p style="font-size:35px"> у  неї сині очі і сіро біла шерсть. Порода в неї шотландсь висловуха вона дуже сильно любить жовток з куриного яйця.</p img src="">
+        <p style="font-size:35px"> у  неї сині очі і сіро біла шерсть. Порода в неї шотландсь висловуха вона дуже сильно любить жовток з куриного яйця.</p> <img src="зображення_viber_2025-06-23_20-29-41-003.jpg">
 
     </main>
     <footer>
