--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 html>
 <title></title>
 
-<body style="background-color:blue">
+<body style="background-color:green">
     <header>
-        <h1> Це сайт про мою кішку (: </h1>
+        <h1> Це сайт про мою кішку </h1>
         
     </header>
     <main>
