--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 html>
 <title></title>
 
-<body style="background-color:green">
+<body style="background-color:blue">
     <header>
         <h1> Це сайт про мою кішку </h1>
         
