--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 
-html>
-<title></title>
-
-<body style="background-color:blue">
+<html>
+<title>сайт про елю</title>
+<body style="background-color:green">
     <header>
-        <h1> Це сайт про мою кішку </h1>
+        <h1 style="text-align: center;"> Це сайт про мою кішку </h1>
         
     </header>
     <main>
-        <h1> моїй кішці 6 з половиную років її звати Еля </h1>
-        <p style="font-size:25px"> у  неї сині очі і сіро біла шерсть. Порода в неї шотландсь висловуха вона дуже сильно любить жовток з куриного яйця.</p> <img src="зображення_viber_2025-06-23_20-29-41-003.jpg">
+        <h1 style="text-align: center;"> моїй кішці 6 з половиную років її звати Еля </h1>
+        <p style="font-size:30px; text-align: center;"> у  неї сині очі і сіро біла шерсть. Порода в неї шотландсь висловуха вона дуже сильно любить жовток з куриного яйця. <img src="зображення_viber_2025-06-23_20-29-41-003.jpg"></p>
 
     </main>
     <footer>
